--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="description" content="My first webpage, with JavaScript" />
   <meta name="keywords" content="mths, ics2o" />
-  <meta name="author" content="Jack LeVasseur" />
+  <meta name="author" content="Mr. Coxall" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
@@ -14,40 +14,35 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   <link rel="manifest" href="site.webmanifest" />
   <title>My first webpage, with JavaScript</title>
-  </head>
-  <body>
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script>
-      function myButtonClicked() {
-        alert("Hello, Wordl!")
-      }
-    </script>
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">Hello, World! with JS</span>
-        </div>
-      </header>
-      <main class="mdl-layout__content">
-        <div class="page-content">
-          Click the button.
-        </div>
-        <br />
-        <!-- Colored raised button -->
-        <main class="mdl-layout__content">
-          <div class="page-content">
-          </div>
-          <br />
-          <!-- Colored raised button -->
-          <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="myButtonClicked()">
-            Click me!
-          </button>
-          <br />
-          <br />
-          <p>
-            <a href="./index2.html">My index2.html page</a>
-          </p>
-        </main>
-        </div>
-        </body>
-        </html>
+</head>
+<body>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script>
+    function myButtonClicked() {
+      alert("Hello, Wordl!")
+    }
+  </script>
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <span class="mdl-layout-title">Hello, World! with JS</span>
+      </div>
+    </header>
+    <main class="mdl-layout__content">
+      <div class="page-content">
+        Click the button.
+      </div>
+      <br />
+      <!-- Colored raised button -->
+      <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="myButtonClicked()">
+        Click me!
+      </button>
+      <br />
+      <br />
+      <p>
+        <a href="./index2.html">My index2.html page</a>
+      </p>
+    </main>
+  </div>
+</body>
+</html>
